[package]
name = "maxblog-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", features = ["serde", "v4"] }
actix-rt = "2.2.0"
actix-web = { version = "3" }
actix-web-actors = "3.0.0"
async-graphql = { version = "2.9.2", default-features = false, features = ["chrono", "uuid"] }
async-graphql-actix-web = "2.9.2"
async-stream = "0.3.2"
async-trait = "0.1.50"
bigdecimal = "0.2.0"
dotenv = "0.15.0"
futures = "0.3.15"
lazy_static = "1.4.0"
rdkafka = "0.26.0"
serde = "1.0.126"
serde_json = "1.0.64"
sqlx = { version = "0.4", features = ["runtime-actix-native-tls", "uuid", "postgres", "chrono"] }
strum = "0.21.0"
strum_macros = "0.21.1"
anyhow = "1.0.41"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.8.4"
argonautica = "0.2.0"
tokio = { version = "1.7.1", features = ["full"] }
async-std = "1.9.0"

[dev-dependencies]
jsonpath_lib = "0.3.0"
testcontainers = "0.12.0"

[[bin]]
name = "maxblog-api"
path = "src/main.rs"
